//***************
//Version History
//***************
[5.0.0]
+ Google search suggestions are now offered when typing in the Googlebar Lite search box
+ Searches are now performed over secure (https) channels by default
+ Added an option to control the search suggestions feature (suggestions are enabled by default)
+ Added an option to lock the search box width
+ Removed the option to enable secure search since it is now enabled by default
+ Removed several deprecated strings
+ Removed the nb-NO locale due to it being woefully out of date

[4.9.15]
+ Restored the resize gripper

[4.9.14]
+ Bug Fix: Search terms should no longer be duplicated when they already exist in the search history
+ Bug Fix: The Googlebar Lite toolbar should now look better when using large icons

[4.9.13]
+ Improved the look and feel of the search box on Windows and Linux
+ Replaced the custom clear search history confirmation dialog with a built-in one from nsIPromptService
+ Added a couple of extra presets to the search box width option
+ Search box width presets now list their width in pixels
+ Bug Fix: Fixed a minor warning that was appearing in the browser console on startup

[4.9.12]
+ Removed the search box resize gripper, and replaced it with a new search box width preference
+ Redesigned the way that internal preference data and common functions are stored
+ Tweaked the internal XUL structure of the toolbar, specifically changing the way the search box is contained
+ Removed a few deprecated content manifests from the package
+ Simplified the style of the about dialog
+ Removed a few unused style rules
+ Bug Fix: The Googlebar Lite toolbar can now be placed in the new menu panel in Firefox 29+, using a new minimal user interface
+ Bug Fix: The main Googlebar Lite toolbar item now renders correctly when placed into the toolbar palette
+ Bug Fix: Fixed a minor object duplication issue with the preferences dialog

[4.9.11]